# dh-gka

./: .gitignore  CMakeLists.txt  MyApp.cpp  README.md  logger.hpp  member-example.cpp  multicast-app-example.cpp  multicast-app-testframe.cpp  multicast-dh-example.cpp  receiver.cpp  sender.cpp  start-member.cpp  statistics-recorder-main.cpp  statistics-writer-main.cpp  str-dh-example.cpp  testframe.cpp
Member/: CMakeLists.txt  member.cpp  member.hpp
distributed_dh/: CMakeLists.txt  distributed_dh.cpp  distributed_dh.hpp
eval_automization_scripts/: start_evaluation.bash  start_runs.bash
eval_figure_scripts/: evaluation.ipynb
key_agreement_protocol/: CMakeLists.txt  key_agreement_protocol.hpp
member/: CMakeLists.txt  MODP2048_256sg.hpp  member.cpp  member.hpp  message.hpp  primitives.hpp
message_handler/: CMakeLists.txt  message.hpp  message_handler.cpp  message_handler.hpp
multicast_channel/: CMakeLists.txt  ip_addresses.hpp  multicast_application.cpp  multicast_application.hpp  multicast_application_impl.cpp  multicast_application_impl.hpp  multicast_channel.cpp  multicast_channel.hpp
statistic_results/test_runs_without_retransmissions/: PROTO_DST_DH-ECC_DH-1000-#0.csv  PROTO_STR_DH-ECC_DH-1000-#0.csv  PROTO_STR_DH-ECC_DH-1000-#10.csv  PROTO_STR_DH-ECC_DH-1000-#11.csv  PROTO_STR_DH-ECC_DH-1000-#12.csv  PROTO_STR_DH-ECC_DH-1000-#13.csv
statistic_results/with_retransmissions_20231023/: PROTO_DST_DH-DEFAULT_DH-100-#0.csv  PROTO_DST_DH-DEFAULT_DH-1000-#0.csv  PROTO_DST_DH-DEFAULT_DH-200-#0.csv  PROTO_DST_DH-DEFAULT_DH-300-#0.csv  PROTO_DST_DH-DEFAULT_DH-400-#0.csv  PROTO_DST_DH-DEFAULT_DH-500-#0.csv  PROTO_DST_DH-DEFAULT_DH-600-#0.csv  PROTO_DST_DH-DEFAULT_DH-700-#0.csv  PROTO_DST_DH-DEFAULT_DH-800-#0.csv  PROTO_DST_DH-DEFAULT_DH-900-#0.csv  PROTO_DST_DH-ECC_DH-100-#0.csv  PROTO_DST_DH-ECC_DH-1000-#0.csv  PROTO_DST_DH-ECC_DH-200-#0.csv  PROTO_DST_DH-ECC_DH-300-#0.csv  PROTO_DST_DH-ECC_DH-400-#0.csv  PROTO_DST_DH-ECC_DH-500-#0.csv  PROTO_DST_DH-ECC_DH-600-#0.csv  PROTO_DST_DH-ECC_DH-700-#0.csv  PROTO_DST_DH-ECC_DH-800-#0.csv  PROTO_DST_DH-ECC_DH-900-#0.csv  PROTO_STR_DH-DEFAULT_DH-100-#0.csv  PROTO_STR_DH-DEFAULT_DH-1000-#0.csv  PROTO_STR_DH-DEFAULT_DH-200-#0.csv  PROTO_STR_DH-DEFAULT_DH-300-#0.csv  PROTO_STR_DH-DEFAULT_DH-400-#0.csv  PROTO_STR_DH-DEFAULT_DH-500-#0.csv  PROTO_STR_DH-DEFAULT_DH-600-#0.csv  PROTO_STR_DH-DEFAULT_DH-700-#0.csv  PROTO_STR_DH-DEFAULT_DH-800-#0.csv  PROTO_STR_DH-DEFAULT_DH-900-#0.csv  PROTO_STR_DH-ECC_DH-100-#0.csv  PROTO_STR_DH-ECC_DH-1000-#0.csv  PROTO_STR_DH-ECC_DH-200-#0.csv  PROTO_STR_DH-ECC_DH-300-#0.csv  PROTO_STR_DH-ECC_DH-400-#0.csv  PROTO_STR_DH-ECC_DH-500-#0.csv  PROTO_STR_DH-ECC_DH-600-#0.csv  PROTO_STR_DH-ECC_DH-700-#0.csv  PROTO_STR_DH-ECC_DH-800-#0.csv  PROTO_STR_DH-ECC_DH-900-#0.csv
statistic_results/with_retransmissions_20231024/: PROTO_DST_DH-DEFAULT_DH-100-#0.csv  PROTO_DST_DH-DEFAULT_DH-100-#1.csv  PROTO_DST_DH-DEFAULT_DH-100-#2.csv  PROTO_DST_DH-DEFAULT_DH-100-#3.csv  PROTO_DST_DH-DEFAULT_DH-100-#4.csv  PROTO_DST_DH-DEFAULT_DH-100-#5.csv  PROTO_DST_DH-DEFAULT_DH-100-#6.csv  PROTO_DST_DH-DEFAULT_DH-100-#7.csv  PROTO_DST_DH-DEFAULT_DH-100-#8.csv  PROTO_DST_DH-DEFAULT_DH-100-#9.csv  PROTO_DST_DH-DEFAULT_DH-1000-#0.csv  PROTO_DST_DH-DEFAULT_DH-1000-#1.csv  PROTO_DST_DH-DEFAULT_DH-1000-#2.csv  PROTO_DST_DH-DEFAULT_DH-1000-#3.csv  PROTO_DST_DH-DEFAULT_DH-1000-#4.csv  PROTO_DST_DH-DEFAULT_DH-1000-#5.csv  PROTO_DST_DH-DEFAULT_DH-1000-#6.csv  PROTO_DST_DH-DEFAULT_DH-1000-#7.csv  PROTO_DST_DH-DEFAULT_DH-1000-#8.csv  PROTO_DST_DH-DEFAULT_DH-1000-#9.csv  PROTO_DST_DH-DEFAULT_DH-200-#0.csv  PROTO_DST_DH-DEFAULT_DH-200-#1.csv  PROTO_DST_DH-DEFAULT_DH-200-#2.csv  PROTO_DST_DH-DEFAULT_DH-200-#3.csv  PROTO_DST_DH-DEFAULT_DH-200-#4.csv  PROTO_DST_DH-DEFAULT_DH-200-#5.csv  PROTO_DST_DH-DEFAULT_DH-200-#6.csv  PROTO_DST_DH-DEFAULT_DH-200-#7.csv  PROTO_DST_DH-DEFAULT_DH-200-#8.csv  PROTO_DST_DH-DEFAULT_DH-200-#9.csv  PROTO_DST_DH-DEFAULT_DH-300-#0.csv  PROTO_DST_DH-DEFAULT_DH-300-#1.csv  PROTO_DST_DH-DEFAULT_DH-300-#2.csv  PROTO_DST_DH-DEFAULT_DH-300-#3.csv  PROTO_DST_DH-DEFAULT_DH-300-#4.csv  PROTO_DST_DH-DEFAULT_DH-300-#5.csv  PROTO_DST_DH-DEFAULT_DH-300-#6.csv  PROTO_DST_DH-DEFAULT_DH-300-#7.csv  PROTO_DST_DH-DEFAULT_DH-300-#8.csv  PROTO_DST_DH-DEFAULT_DH-300-#9.csv  (+360 more)
statistic_results/without_retransmissions/: PROTO_DST_DH-ECC_DH-10-#0.csv  PROTO_DST_DH-ECC_DH-10-#1.csv  PROTO_DST_DH-ECC_DH-10-#10.csv  PROTO_DST_DH-ECC_DH-10-#11.csv  PROTO_DST_DH-ECC_DH-10-#12.csv  PROTO_DST_DH-ECC_DH-10-#13.csv  PROTO_DST_DH-ECC_DH-10-#14.csv  PROTO_DST_DH-ECC_DH-10-#15.csv  PROTO_DST_DH-ECC_DH-10-#16.csv  PROTO_DST_DH-ECC_DH-10-#17.csv  PROTO_DST_DH-ECC_DH-10-#18.csv  PROTO_DST_DH-ECC_DH-10-#19.csv  PROTO_DST_DH-ECC_DH-10-#2.csv  PROTO_DST_DH-ECC_DH-10-#20.csv  PROTO_DST_DH-ECC_DH-10-#21.csv  PROTO_DST_DH-ECC_DH-10-#22.csv  PROTO_DST_DH-ECC_DH-10-#23.csv  PROTO_DST_DH-ECC_DH-10-#24.csv  PROTO_DST_DH-ECC_DH-10-#25.csv  PROTO_DST_DH-ECC_DH-10-#26.csv  PROTO_DST_DH-ECC_DH-10-#27.csv  PROTO_DST_DH-ECC_DH-10-#28.csv  PROTO_DST_DH-ECC_DH-10-#29.csv  PROTO_DST_DH-ECC_DH-10-#3.csv  PROTO_DST_DH-ECC_DH-10-#30.csv  PROTO_DST_DH-ECC_DH-10-#31.csv  PROTO_DST_DH-ECC_DH-10-#32.csv  PROTO_DST_DH-ECC_DH-10-#33.csv  PROTO_DST_DH-ECC_DH-10-#34.csv  PROTO_DST_DH-ECC_DH-10-#35.csv  PROTO_DST_DH-ECC_DH-10-#36.csv  PROTO_DST_DH-ECC_DH-10-#37.csv  PROTO_DST_DH-ECC_DH-10-#38.csv  PROTO_DST_DH-ECC_DH-10-#39.csv  PROTO_DST_DH-ECC_DH-10-#4.csv  PROTO_DST_DH-ECC_DH-10-#40.csv  PROTO_DST_DH-ECC_DH-10-#41.csv  PROTO_DST_DH-ECC_DH-10-#42.csv  PROTO_DST_DH-ECC_DH-10-#43.csv  PROTO_DST_DH-ECC_DH-10-#44.csv  (+6434 more)
statistics/: CMakeLists.txt  shared_memory_parameters.hpp  statistics_recorder.cpp  statistics_recorder.hpp  statistics_writer.cpp  statistics_writer.hpp
str_dh/: CMakeLists.txt  MODP2048_256sg.hpp  member.cpp  member.hpp  message.hpp  primitives.hpp  str_dh.cpp  str_dh.hpp  str_key_tree.hpp
tg_dh/: CMakeLists.txt  tg_dh.cpp  tg_dh.hpp  tg_key_tree.hpp  tg_node.hpp
timestamp/: statistics_collector.cpp  statistics_collector.hpp
type_definitions/: primitives.hpp
(+1256 files in other folders)
