file(GLOB MY_SOURCES "./*.cpp")
file(GLOB MY_HEADERS "./*.hpp")
add_library(tg_dh_lib ${MY_SOURCES} ${MY_HEADERS})
target_include_directories(tg_dh_lib PUBLIC ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/multicast_channel ${PROJECT_SOURCE_DIR}/key_agreement_protocol ${PROJECT_SOURCE_DIR}/message_handler ${PROJECT_SOURCE_DIR}/type_definitions ${PROJECT_SOURCE_DIR}/dh_parameters)
target_link_libraries(tg_dh_lib multicast_channel_lib message_handler_lib cryptopp crypto boost_serialization boost_system)